<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:columnCount="13"
    android:rowCount="4">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_rowWeight="1"
        android:layout_columnSpan="5"
        android:layout_columnWeight="5"
        android:layout_gravity="center"
        android:gravity="center"
        android:padding="4dp"
        android:text="@string/department_table_credit_section_culture" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_rowWeight="1"
        android:layout_columnSpan="5"
        android:layout_gravity="center"
        android:gravity="center"
        android:padding="4dp"
        android:text="@string/department_table_credit_section_major" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_rowSpan="3"
        android:layout_rowWeight="3"
        android:gravity="center"
        android:padding="4dp"
        android:text="@string/department_table_credit_section_teaching" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_rowSpan="3"
        android:layout_rowWeight="3"
        android:gravity="center"
        android:padding="4dp"
        android:text="@string/department_table_credit_section_free_choice" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_rowSpan="3"
        android:layout_rowWeight="3"
        android:gravity="center"
        android:padding="4dp"
        android:text="@string/department_table_credit_section_total" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_rowSpan="2"
        android:layout_rowWeight="2"
        android:gravity="center"
        android:padding="4dp"
        android:text="@string/department_table_credit_basic" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_rowSpan="2"
        android:layout_rowWeight="2"
        android:gravity="center"
        android:padding="4dp"
        android:text="@string/department_table_credit_balanced" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_rowSpan="2"
        android:layout_rowWeight="2"
        android:gravity="center"
        android:padding="4dp"
        android:text="@string/department_table_credit_specialized" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_rowSpan="2"
        android:layout_rowWeight="2"
        android:gravity="center"
        android:padding="4dp"
        android:text="@string/department_table_credit_college" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_rowSpan="2"
        android:layout_rowWeight="2"
        android:gravity="center"
        android:padding="4dp"
        android:text="@string/department_table_credit_partial_total" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_rowWeight="1"
        android:layout_columnSpan="2"
        android:layout_gravity="center"
        android:gravity="center"
        android:paddingLeft="8dp"
        android:paddingTop="4dp"
        android:paddingRight="8dp"
        android:paddingBottom="4dp"
        android:text="@string/department_table_credit_min_major" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_rowSpan="2"
        android:layout_rowWeight="2"
        android:gravity="center"
        android:padding="4dp"
        android:text="@string/department_table_credit_partial_total" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_rowSpan="2"
        android:layout_rowWeight="2"
        android:gravity="center"
        android:padding="4dp"

        android:text="@string/department_table_credit_deep" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_rowSpan="2"
        android:layout_rowWeight="2"
        android:gravity="center"
        android:padding="4dp"
        android:text="@string/department_table_credit_total" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_rowWeight="1"
        android:layout_gravity="center"
        android:gravity="center"
        android:padding="4dp"
        android:text="@string/department_table_credit_required" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_rowWeight="1"
        android:layout_gravity="center"
        android:gravity="center"
        android:padding="4dp"
        android:text="@string/department_table_credit_select" />

</GridLayout>